common-applications/test-environment/majun/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: majun
  name: majun
